ConEmu 161206 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=161203
-location_arc=2836989,xA885E8FF,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuPack.161203.7z
-location_exe=5490480,x1D91973A,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuSetup.161203.exe
-md5_arc=07b306c49dde1107fd46dbc8da4aa828
-md5_exe=ba7a8a82996a23926340daf5016f2f8c
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161203.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161203.exe?use_mirror=autoselect
+version=161206
+location_arc=2834155,x9814CDE4,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuPack.161206.7z
+location_exe=5487408,x609D7B55,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuSetup.161206.exe
+md5_arc=5d1da28d4f6dca12a2809f901eb25c04
+md5_exe=ad57900d0d5f2cc0d2564bcdfc997d1d
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=161203
-location_arc=2836989,xA885E8FF,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuPack.161203.7z
-location_exe=5490480,x1D91973A,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuSetup.161203.exe
-md5_arc=07b306c49dde1107fd46dbc8da4aa828
-md5_exe=ba7a8a82996a23926340daf5016f2f8c
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161203.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161203.exe?use_mirror=autoselect
+version=161206
+location_arc=2834155,x9814CDE4,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuPack.161206.7z
+location_exe=5487408,x609D7B55,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuSetup.161206.exe
+md5_arc=5d1da28d4f6dca12a2809f901eb25c04
+md5_exe=ad57900d0d5f2cc0d2564bcdfc997d1d
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=161203
-location_arc=2836989,xA885E8FF,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuPack.161203.7z
-location_exe=5490480,x1D91973A,https://github.com/Maximus5/ConEmu/releases/download/v16.12.03/ConEmuSetup.161203.exe
-md5_arc=07b306c49dde1107fd46dbc8da4aa828
-md5_exe=ba7a8a82996a23926340daf5016f2f8c
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161203.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161203.exe?use_mirror=autoselect
+version=161206
+location_arc=2834155,x9814CDE4,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuPack.161206.7z
+location_exe=5487408,x609D7B55,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuSetup.161206.exe
+md5_arc=5d1da28d4f6dca12a2809f901eb25c04
+md5_exe=ad57900d0d5f2cc0d2564bcdfc997d1d
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
