ConEmu 170118 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=161206
-location_arc=2834155,x9814CDE4,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuPack.161206.7z
-location_exe=5487408,x609D7B55,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuSetup.161206.exe
-md5_arc=5d1da28d4f6dca12a2809f901eb25c04
-md5_exe=ad57900d0d5f2cc0d2564bcdfc997d1d
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
+version=170118
+location_arc=2839155,xE68EC00B,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuPack.170118.7z
+location_exe=5494064,xE3563C23,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuSetup.170118.exe
+md5_arc=f9ed602268ffa41754b2ccca71bf7050
+md5_exe=36fde7764cb4c8dcb05709d34aeaa065
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170118.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170118.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=161206
-location_arc=2834155,x9814CDE4,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuPack.161206.7z
-location_exe=5487408,x609D7B55,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuSetup.161206.exe
-md5_arc=5d1da28d4f6dca12a2809f901eb25c04
-md5_exe=ad57900d0d5f2cc0d2564bcdfc997d1d
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
+version=170118
+location_arc=2839155,xE68EC00B,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuPack.170118.7z
+location_exe=5494064,xE3563C23,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuSetup.170118.exe
+md5_arc=f9ed602268ffa41754b2ccca71bf7050
+md5_exe=36fde7764cb4c8dcb05709d34aeaa065
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170118.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170118.exe?use_mirror=autoselect
