ConEmu 170227 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170118
-location_arc=2839155,xE68EC00B,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuPack.170118.7z
-location_exe=5494064,xE3563C23,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuSetup.170118.exe
-md5_arc=f9ed602268ffa41754b2ccca71bf7050
-md5_exe=36fde7764cb4c8dcb05709d34aeaa065
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170118.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170118.exe?use_mirror=autoselect
+version=170227
+location_arc=2850239,x1BBCE762,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuPack.170227.7z
+location_exe=5511272,xB904F729,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuSetup.170227.exe
+md5_arc=4b48581422ee2d29dce3f7c2f09d4765
+md5_exe=726085a80dd3da1a999846dcbc55d19a
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170227.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170227.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170118
-location_arc=2839155,xE68EC00B,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuPack.170118.7z
-location_exe=5494064,xE3563C23,https://github.com/Maximus5/ConEmu/releases/download/v17.01.18/ConEmuSetup.170118.exe
-md5_arc=f9ed602268ffa41754b2ccca71bf7050
-md5_exe=36fde7764cb4c8dcb05709d34aeaa065
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170118.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170118.exe?use_mirror=autoselect
+version=170227
+location_arc=2850239,x1BBCE762,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuPack.170227.7z
+location_exe=5511272,xB904F729,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuSetup.170227.exe
+md5_arc=4b48581422ee2d29dce3f7c2f09d4765
+md5_exe=726085a80dd3da1a999846dcbc55d19a
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170227.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170227.exe?use_mirror=autoselect
