ConEmu 170305 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170227
-location_arc=2850239,x1BBCE762,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuPack.170227.7z
-location_exe=5511272,xB904F729,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuSetup.170227.exe
-md5_arc=4b48581422ee2d29dce3f7c2f09d4765
-md5_exe=726085a80dd3da1a999846dcbc55d19a
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170227.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170227.exe?use_mirror=autoselect
+version=170305
+location_arc=2848935,x14AB401F,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuPack.170305.7z
+location_exe=5506152,x09F2430D,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuSetup.170305.exe
+md5_arc=1756b3cd7a10b4646782b6d99dcf1265
+md5_exe=bbd36c83ef9b4054ed1437c481b6009c
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170305.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170305.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170227
-location_arc=2850239,x1BBCE762,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuPack.170227.7z
-location_exe=5511272,xB904F729,https://github.com/Maximus5/ConEmu/releases/download/v17.02.27/ConEmuSetup.170227.exe
-md5_arc=4b48581422ee2d29dce3f7c2f09d4765
-md5_exe=726085a80dd3da1a999846dcbc55d19a
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170227.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170227.exe?use_mirror=autoselect
+version=170305
+location_arc=2848935,x14AB401F,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuPack.170305.7z
+location_exe=5506152,x09F2430D,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuSetup.170305.exe
+md5_arc=1756b3cd7a10b4646782b6d99dcf1265
+md5_exe=bbd36c83ef9b4054ed1437c481b6009c
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170305.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170305.exe?use_mirror=autoselect
