ConEmu 170316 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170305
-location_arc=2848935,x14AB401F,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuPack.170305.7z
-location_exe=5506152,x09F2430D,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuSetup.170305.exe
-md5_arc=1756b3cd7a10b4646782b6d99dcf1265
-md5_exe=bbd36c83ef9b4054ed1437c481b6009c
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170305.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170305.exe?use_mirror=autoselect
+version=170316
+location_arc=2851073,x9332A393,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuPack.170316.7z
+location_exe=5503584,x56A129C7,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuSetup.170316.exe
+md5_arc=d352af8eecd06222075b776ee5fc825e
+md5_exe=c2bb16740d3e6756c449bbc2f4566bdc
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170316.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170316.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170305
-location_arc=2848935,x14AB401F,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuPack.170305.7z
-location_exe=5506152,x09F2430D,https://github.com/Maximus5/ConEmu/releases/download/v17.03.05/ConEmuSetup.170305.exe
-md5_arc=1756b3cd7a10b4646782b6d99dcf1265
-md5_exe=bbd36c83ef9b4054ed1437c481b6009c
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170305.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170305.exe?use_mirror=autoselect
+version=170316
+location_arc=2851073,x9332A393,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuPack.170316.7z
+location_exe=5503584,x56A129C7,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuSetup.170316.exe
+md5_arc=d352af8eecd06222075b776ee5fc825e
+md5_exe=c2bb16740d3e6756c449bbc2f4566bdc
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170316.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170316.exe?use_mirror=autoselect
