ConEmu 170326 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170316
-location_arc=2851073,x9332A393,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuPack.170316.7z
-location_exe=5503584,x56A129C7,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuSetup.170316.exe
-md5_arc=d352af8eecd06222075b776ee5fc825e
-md5_exe=c2bb16740d3e6756c449bbc2f4566bdc
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170316.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170316.exe?use_mirror=autoselect
+version=170326
+location_arc=2851347,x4B573E9C,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuPack.170326.7z
+location_exe=5504096,x5A59D23A,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuSetup.170326.exe
+md5_arc=c1d68880650f9d55efa9638355360b26
+md5_exe=c2f4d99b31316a361de32907dc426146
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170326.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170326.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170316
-location_arc=2851073,x9332A393,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuPack.170316.7z
-location_exe=5503584,x56A129C7,https://github.com/Maximus5/ConEmu/releases/download/v17.03.16/ConEmuSetup.170316.exe
-md5_arc=d352af8eecd06222075b776ee5fc825e
-md5_exe=c2bb16740d3e6756c449bbc2f4566bdc
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170316.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170316.exe?use_mirror=autoselect
+version=170326
+location_arc=2851347,x4B573E9C,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuPack.170326.7z
+location_exe=5504096,x5A59D23A,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuSetup.170326.exe
+md5_arc=c1d68880650f9d55efa9638355360b26
+md5_exe=c2f4d99b31316a361de32907dc426146
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170326.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170326.exe?use_mirror=autoselect
