ConEmu 170402 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170326
-location_arc=2851347,x4B573E9C,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuPack.170326.7z
-location_exe=5504096,x5A59D23A,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuSetup.170326.exe
-md5_arc=c1d68880650f9d55efa9638355360b26
-md5_exe=c2f4d99b31316a361de32907dc426146
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170326.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170326.exe?use_mirror=autoselect
+version=170402
+location_arc=2853426,xE632EFF5,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuPack.170402.7z
+location_exe=5504104,x7274D292,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuSetup.170402.exe
+md5_arc=cc0d3d8aa93b3c598dc6fcbe3d724cca
+md5_exe=2ac62c46ced934b2d5cecef4c3e00927
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170326
-location_arc=2851347,x4B573E9C,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuPack.170326.7z
-location_exe=5504096,x5A59D23A,https://github.com/Maximus5/ConEmu/releases/download/v17.03.26/ConEmuSetup.170326.exe
-md5_arc=c1d68880650f9d55efa9638355360b26
-md5_exe=c2f4d99b31316a361de32907dc426146
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170326.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170326.exe?use_mirror=autoselect
+version=170402
+location_arc=2853426,xE632EFF5,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuPack.170402.7z
+location_exe=5504104,x7274D292,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuSetup.170402.exe
+md5_arc=cc0d3d8aa93b3c598dc6fcbe3d724cca
+md5_exe=2ac62c46ced934b2d5cecef4c3e00927
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
