--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170402
-location_arc=2853426,xE632EFF5,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuPack.170402.7z
-location_exe=5504104,x7274D292,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuSetup.170402.exe
-md5_arc=cc0d3d8aa93b3c598dc6fcbe3d724cca
-md5_exe=2ac62c46ced934b2d5cecef4c3e00927
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
+version=170517
+location_arc=3274086,xC3CF4A13,https://github.com/Maximus5/ConEmu/releases/download/v17.05.17/ConEmuPack.170517.7z
+location_exe=5350704,x8ED58E41,https://github.com/Maximus5/ConEmu/releases/download/v17.05.17/ConEmuSetup.170517.exe
+md5_arc=a87b997b996a9630505f721201cbeb7c
+md5_exe=b4028d4822470831d223733d58863bcf
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170517.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170517.exe?use_mirror=autoselect
