ConEmu 170605 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170517
-location_arc=3274086,xC3CF4A13,https://github.com/Maximus5/ConEmu/releases/download/v17.05.17/ConEmuPack.170517.7z
-location_exe=5350704,x8ED58E41,https://github.com/Maximus5/ConEmu/releases/download/v17.05.17/ConEmuSetup.170517.exe
-md5_arc=a87b997b996a9630505f721201cbeb7c
-md5_exe=b4028d4822470831d223733d58863bcf
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170517.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170517.exe?use_mirror=autoselect
+version=170605
+location_arc=3275275,x2122AA37,https://github.com/Maximus5/ConEmu/releases/download/v17.06.05/ConEmuPack.170605.7z
+location_exe=5350704,x5C927B11,https://github.com/Maximus5/ConEmu/releases/download/v17.06.05/ConEmuSetup.170605.exe
+md5_arc=a158b82b1c5a13eec0e5e6c474a4a0cf
+md5_exe=9db3df2bc250f67f7ecb4b5b8e08d48c
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170605.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170605.exe?use_mirror=autoselect
