ConEmu 170622 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170605
-location_arc=3275275,x2122AA37,https://github.com/Maximus5/ConEmu/releases/download/v17.06.05/ConEmuPack.170605.7z
-location_exe=5350704,x5C927B11,https://github.com/Maximus5/ConEmu/releases/download/v17.06.05/ConEmuSetup.170605.exe
-md5_arc=a158b82b1c5a13eec0e5e6c474a4a0cf
-md5_exe=9db3df2bc250f67f7ecb4b5b8e08d48c
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170605.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170605.exe?use_mirror=autoselect
+version=170622
+location_arc=3276202,x2B7FFDE4,https://github.com/Maximus5/ConEmu/releases/download/v17.06.22/ConEmuPack.170622.7z
+location_exe=5353776,xC343A3D6,https://github.com/Maximus5/ConEmu/releases/download/v17.06.22/ConEmuSetup.170622.exe
+md5_arc=da001ae4a443fa4af2f7cb7f619d7e87
+md5_exe=95dc76197f63e5289ac1f65d820436dc
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170622.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170622.exe?use_mirror=autoselect
