ConEmu 170705 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170622
-location_arc=3276202,x2B7FFDE4,https://github.com/Maximus5/ConEmu/releases/download/v17.06.22/ConEmuPack.170622.7z
-location_exe=5353776,xC343A3D6,https://github.com/Maximus5/ConEmu/releases/download/v17.06.22/ConEmuSetup.170622.exe
-md5_arc=da001ae4a443fa4af2f7cb7f619d7e87
-md5_exe=95dc76197f63e5289ac1f65d820436dc
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170622.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170622.exe?use_mirror=autoselect
+version=170705
+location_arc=3313346,x139A5A33,https://github.com/Maximus5/ConEmu/releases/download/v17.07.05/ConEmuPack.170705.7z
+location_exe=5392688,x6F36BD3E,https://github.com/Maximus5/ConEmu/releases/download/v17.07.05/ConEmuSetup.170705.exe
+md5_arc=fe617784007d699b936046dc4011bec8
+md5_exe=a23ed2a96047009875d989828238dd87
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170705.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170705.exe?use_mirror=autoselect
