ConEmu 170709 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170705
-location_arc=3313346,x139A5A33,https://github.com/Maximus5/ConEmu/releases/download/v17.07.05/ConEmuPack.170705.7z
-location_exe=5392688,x6F36BD3E,https://github.com/Maximus5/ConEmu/releases/download/v17.07.05/ConEmuSetup.170705.exe
-md5_arc=fe617784007d699b936046dc4011bec8
-md5_exe=a23ed2a96047009875d989828238dd87
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170705.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170705.exe?use_mirror=autoselect
+version=170709
+location_arc=3314899,x3E1A4AFD,https://github.com/Maximus5/ConEmu/releases/download/v17.07.09/ConEmuPack.170709.7z
+location_exe=5396272,x636AB79F,https://github.com/Maximus5/ConEmu/releases/download/v17.07.09/ConEmuSetup.170709.exe
+md5_arc=d682671445f70286bed3c5bc5307e3d9
+md5_exe=05cd38b6ad6cda374848d0052d8f2896
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170709.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170709.exe?use_mirror=autoselect
