--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170709
-location_arc=3314899,x3E1A4AFD,https://github.com/Maximus5/ConEmu/releases/download/v17.07.09/ConEmuPack.170709.7z
-location_exe=5396272,x636AB79F,https://github.com/Maximus5/ConEmu/releases/download/v17.07.09/ConEmuSetup.170709.exe
-md5_arc=d682671445f70286bed3c5bc5307e3d9
-md5_exe=05cd38b6ad6cda374848d0052d8f2896
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170709.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170709.exe?use_mirror=autoselect
+version=170723
+location_arc=3314148,x247A121C,https://github.com/Maximus5/ConEmu/releases/download/v17.07.23/ConEmuPack.170723.7z
+location_exe=5395008,x90F90443,https://github.com/Maximus5/ConEmu/releases/download/v17.07.23/ConEmuSetup.170723.exe
+md5_arc=0a953963be37c843a47b0837b51536dc
+md5_exe=ca46cb75a31df6c97f84b23733e209fc
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170723.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170723.exe?use_mirror=autoselect
