ConEmu 170730 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170723
-location_arc=3314148,x247A121C,https://github.com/Maximus5/ConEmu/releases/download/v17.07.23/ConEmuPack.170723.7z
-location_exe=5395008,x90F90443,https://github.com/Maximus5/ConEmu/releases/download/v17.07.23/ConEmuSetup.170723.exe
-md5_arc=0a953963be37c843a47b0837b51536dc
-md5_exe=ca46cb75a31df6c97f84b23733e209fc
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170723.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170723.exe?use_mirror=autoselect
+version=170730
+location_arc=4382531,x8AE499F0,https://github.com/Maximus5/ConEmu/releases/download/v17.07.30/ConEmuPack.170730.7z
+location_exe=6683200,x2E2EB715,https://github.com/Maximus5/ConEmu/releases/download/v17.07.30/ConEmuSetup.170730.exe
+md5_arc=208a25a587b3e4a1686451f602239657
+md5_exe=b279de4498655b5946d51e1a3ab2a86a
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170730.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170730.exe?use_mirror=autoselect
