--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170402
-location_arc=2853426,xE632EFF5,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuPack.170402.7z
-location_exe=5504104,x7274D292,https://github.com/Maximus5/ConEmu/releases/download/v17.04.02/ConEmuSetup.170402.exe
-md5_arc=cc0d3d8aa93b3c598dc6fcbe3d724cca
-md5_exe=2ac62c46ced934b2d5cecef4c3e00927
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170402.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170402.exe?use_mirror=autoselect
+version=170805
+location_arc=4355400,x24F88B07,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuPack.170805.7z
+location_exe=6660672,xB158973C,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuSetup.170805.exe
+md5_arc=01932242ac7575961e3bc34b558fe76f
+md5_exe=807753984f1c5f190a21f6467dd27d50
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170805.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170805.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170730
-location_arc=4382531,x8AE499F0,https://github.com/Maximus5/ConEmu/releases/download/v17.07.30/ConEmuPack.170730.7z
-location_exe=6683200,x2E2EB715,https://github.com/Maximus5/ConEmu/releases/download/v17.07.30/ConEmuSetup.170730.exe
-md5_arc=208a25a587b3e4a1686451f602239657
-md5_exe=b279de4498655b5946d51e1a3ab2a86a
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170730.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170730.exe?use_mirror=autoselect
+version=170805
+location_arc=4355400,x24F88B07,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuPack.170805.7z
+location_exe=6660672,xB158973C,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuSetup.170805.exe
+md5_arc=01932242ac7575961e3bc34b558fe76f
+md5_exe=807753984f1c5f190a21f6467dd27d50
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170805.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170805.exe?use_mirror=autoselect
