ConEmu 170807 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170805
-location_arc=4355400,x24F88B07,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuPack.170805.7z
-location_exe=6660672,xB158973C,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuSetup.170805.exe
-md5_arc=01932242ac7575961e3bc34b558fe76f
-md5_exe=807753984f1c5f190a21f6467dd27d50
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170805.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170805.exe?use_mirror=autoselect
+version=170807
+location_arc=4357858,x5C05B202,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuPack.170807.7z
+location_exe=6662720,xFDAEC705,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuSetup.170807.exe
+md5_arc=df040ed7b9aee26b1e07b699bfcb7f9c
+md5_exe=83f00d466187e168d796a276dc407ec5
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170805
-location_arc=4355400,x24F88B07,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuPack.170805.7z
-location_exe=6660672,xB158973C,https://github.com/Maximus5/ConEmu/releases/download/v17.08.05/ConEmuSetup.170805.exe
-md5_arc=01932242ac7575961e3bc34b558fe76f
-md5_exe=807753984f1c5f190a21f6467dd27d50
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170805.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170805.exe?use_mirror=autoselect
+version=170807
+location_arc=4357858,x5C05B202,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuPack.170807.7z
+location_exe=6662720,xFDAEC705,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuSetup.170807.exe
+md5_arc=df040ed7b9aee26b1e07b699bfcb7f9c
+md5_exe=83f00d466187e168d796a276dc407ec5
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
