ConEmu 170814 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170807
-location_arc=4357858,x5C05B202,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuPack.170807.7z
-location_exe=6662720,xFDAEC705,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuSetup.170807.exe
-md5_arc=df040ed7b9aee26b1e07b699bfcb7f9c
-md5_exe=83f00d466187e168d796a276dc407ec5
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
+version=170814
+location_arc=4389407,x8916D14F,https://github.com/Maximus5/ConEmu/releases/download/v17.08.14/ConEmuPack.170814.7z
+location_exe=6688320,x1D237C42,https://github.com/Maximus5/ConEmu/releases/download/v17.08.14/ConEmuSetup.170814.exe
+md5_arc=0bb20758941946c719a0cd9026b9cab1
+md5_exe=afd05a28957899216e50e528515b1733
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170814.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170814.exe?use_mirror=autoselect
