--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ mirror_ru: "http://www.conemu.ru"
 # used with conjunction with
 # page.docfolder: "/en"
 # sort of: href="{{ site.mirror }}{{ page.docfolder }}/VersionComparison.html"
+fosshub: "https://www.fosshub.com/ConEmu.html"
 
 
 # ### Build settings ###
