ConEmu 170819 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170814
-location_arc=4389407,x8916D14F,https://github.com/Maximus5/ConEmu/releases/download/v17.08.14/ConEmuPack.170814.7z
-location_exe=6688320,x1D237C42,https://github.com/Maximus5/ConEmu/releases/download/v17.08.14/ConEmuSetup.170814.exe
-md5_arc=0bb20758941946c719a0cd9026b9cab1
-md5_exe=afd05a28957899216e50e528515b1733
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170814.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170814.exe?use_mirror=autoselect
+version=170819
+location_arc=4391927,x36274662,https://github.com/Maximus5/ConEmu/releases/download/v17.08.19/ConEmuPack.170819.7z
+location_exe=6693952,x476D9729,https://github.com/Maximus5/ConEmu/releases/download/v17.08.19/ConEmuSetup.170819.exe
+md5_arc=15dfd3e43d311cf80bfb0335e1b102ea
+md5_exe=3dba6a457d74a6dce31f9745891c0a12
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170819.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170819.exe?use_mirror=autoselect
