ConEmu 170910 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170819
-location_arc=4391927,x36274662,https://github.com/Maximus5/ConEmu/releases/download/v17.08.19/ConEmuPack.170819.7z
-location_exe=6693952,x476D9729,https://github.com/Maximus5/ConEmu/releases/download/v17.08.19/ConEmuSetup.170819.exe
-md5_arc=15dfd3e43d311cf80bfb0335e1b102ea
-md5_exe=3dba6a457d74a6dce31f9745891c0a12
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170819.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170819.exe?use_mirror=autoselect
+version=170910
+location_arc=4375799,x4B56D96F,https://github.com/Maximus5/ConEmu/releases/download/v17.09.10/ConEmuPack.170910.7z
+location_exe=6700608,x1DFFB9DC,https://github.com/Maximus5/ConEmu/releases/download/v17.09.10/ConEmuSetup.170910.exe
+md5_arc=9fd98fced16e39aad1c63cd934f4f7be
+md5_exe=63245c85f3af83dfbd9a53cd0a75c5f2
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170910.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170910.exe?use_mirror=autoselect
