--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=170910
-location_arc=4375799,x4B56D96F,https://github.com/Maximus5/ConEmu/releases/download/v17.09.10/ConEmuPack.170910.7z
-location_exe=6700608,x1DFFB9DC,https://github.com/Maximus5/ConEmu/releases/download/v17.09.10/ConEmuSetup.170910.exe
-md5_arc=9fd98fced16e39aad1c63cd934f4f7be
-md5_exe=63245c85f3af83dfbd9a53cd0a75c5f2
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.170910.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.170910.exe?use_mirror=autoselect
+version=171025
+location_arc=4382498,x6A649290,https://github.com/Maximus5/ConEmu/releases/download/v17.10.25/ConEmuPack.171025.7z
+location_exe=6386240,xC297647C,https://github.com/Maximus5/ConEmu/releases/download/v17.10.25/ConEmuSetup.171025.exe
+md5_arc=dbeba98e13e6c5180283bfeff11a245b
+md5_exe=f58b952daffd60cbde1b35c0ade01707
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171025.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171025.exe?use_mirror=autoselect
