ConEmu 171109 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=170807
-location_arc=4357858,x5C05B202,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuPack.170807.7z
-location_exe=6662720,xFDAEC705,https://github.com/Maximus5/ConEmu/releases/download/v17.08.07/ConEmuSetup.170807.exe
-md5_arc=df040ed7b9aee26b1e07b699bfcb7f9c
-md5_exe=83f00d466187e168d796a276dc407ec5
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.170807.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.170807.exe?use_mirror=autoselect
+version=171109
+location_arc=4141243,xC361779D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuPack.171109.7z
+location_exe=6359104,x43B4365D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuSetup.171109.exe
+md5_arc=7827460033291ef30d0fdc716f9c2cad
+md5_exe=47a66a52c65cee9583bf4c401f45ef4b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=171025
-location_arc=4382498,x6A649290,https://github.com/Maximus5/ConEmu/releases/download/v17.10.25/ConEmuPack.171025.7z
-location_exe=6386240,xC297647C,https://github.com/Maximus5/ConEmu/releases/download/v17.10.25/ConEmuSetup.171025.exe
-md5_arc=dbeba98e13e6c5180283bfeff11a245b
-md5_exe=f58b952daffd60cbde1b35c0ade01707
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171025.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171025.exe?use_mirror=autoselect
+version=171109
+location_arc=4141243,xC361779D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuPack.171109.7z
+location_exe=6359104,x43B4365D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuSetup.171109.exe
+md5_arc=7827460033291ef30d0fdc716f9c2cad
+md5_exe=47a66a52c65cee9583bf4c401f45ef4b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
