ConEmu 171117 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=171109
-location_arc=4141243,xC361779D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuPack.171109.7z
-location_exe=6359104,x43B4365D,https://github.com/Maximus5/ConEmu/releases/download/v17.11.09/ConEmuSetup.171109.exe
-md5_arc=7827460033291ef30d0fdc716f9c2cad
-md5_exe=47a66a52c65cee9583bf4c401f45ef4b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
+version=171117
+location_arc=4161941,xA52BE9B4,https://github.com/Maximus5/ConEmu/releases/download/v17.11.17/ConEmuPack.171117.7z
+location_exe=6392384,x816E2107,https://github.com/Maximus5/ConEmu/releases/download/v17.11.17/ConEmuSetup.171117.exe
+md5_arc=b3037005fd335f0b202fa457e696fcfd
+md5_exe=93c93546ba4ed0625f908c52453e1225
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171117.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171117.exe?use_mirror=autoselect
