ConEmu 171203 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.171109.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.171109.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=171117
-location_arc=4161941,xA52BE9B4,https://github.com/Maximus5/ConEmu/releases/download/v17.11.17/ConEmuPack.171117.7z
-location_exe=6392384,x816E2107,https://github.com/Maximus5/ConEmu/releases/download/v17.11.17/ConEmuSetup.171117.exe
-md5_arc=b3037005fd335f0b202fa457e696fcfd
-md5_exe=93c93546ba4ed0625f908c52453e1225
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171117.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171117.exe?use_mirror=autoselect
+version=171203
+location_arc=4164005,x3F7B0A4F,https://github.com/Maximus5/ConEmu/releases/download/v17.12.03/ConEmuPack.171203.7z
+location_exe=6393720,x9B8E8307,https://github.com/Maximus5/ConEmu/releases/download/v17.12.03/ConEmuSetup.171203.exe
+md5_arc=a9c1463d769adda451443f599b03d6ef
+md5_exe=97842beb57b4618541373b8cb5bf9afd
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.171203.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.171203.exe?use_mirror=autoselect
